fix toggle alignment

--- a/src/index.css
+++ b/src/index.css
@@ -289,34 +289,34 @@
   .toggle-switch {
     @apply mt-1 xl:mt-8 block ml-auto mr-2 relative font-normal text-black dark:text-white bg-white dark:bg-black;
     font-size: 0.625rem;
-    width: 117px;
-    height: 41px;
+    width: 124px;
+    height: 44px;
     background-color: #e5e5e5;
     border: 1px solid #efefe2;
-    border-radius: 19px;
+    border-radius: 40px;
   }
   @screen 2xl {
     .toggle-switch {
       @apply text-sm;
-      width: 159px;
-      height: 55px;
+      width: 154px;
+      height: 54px;
       border-radius: 50px;
     }
   }
   .ellipse {
-    @apply absolute top-0 right-0 bg-white flex justify-center items-center;
+    @apply absolute top-px right-px bg-white flex justify-center items-center;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 100%;
-    width: 39px;
-    height: 39px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
   }
   .ellipse img {
     width: 20px;
   }
   @screen 2xl {
     .ellipse {
-      width: 53px;
-      height: 53px;
+      width: 50px;
+      height: 50px;
     }
     .ellipse img {
       width: 30px;
